--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 # README
 
-<img width="381" alt="Screenshot 2023-04-03 171145" src="https://user-images.githubusercontent.com/74611913/229567533-89ea2941-ae35-4d93-a234-7deea72d8802.png">
+Demo Image: "https://user-images.githubusercontent.com/74611913/229567533-89ea2941-ae35-4d93-a234-7deea72d8802.png"
